Add missing modules to cabal file

--- a/fac.cabal
+++ b/fac.cabal
@@ -35,6 +35,8 @@ Executable fac
     Formula
     Aiger
     Literal
+    Simulator
+    Unrolling
   Include-Dirs: minisat
   Includes:
     CInterface.h
