Add interpolation module

--- a/fac.cabal
+++ b/fac.cabal
@@ -37,6 +37,7 @@ Executable fac
     Literal
     Simulator
     Unrolling
+    Interpolation
   Include-Dirs: minisat
   Includes:
     CInterface.h
